--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
     <h1>Home</h1>
     <section>
         <h2>About me</h2>
-        <img src="assets/img/julien.jpeg" alt="A photo of me">
+        <img src="assets/img/julien.jpeg" alt="A photo of me" width="200" height="200" >
         <p>👋 Ciao I'm Julien, and welcome to my site.</p>
         <p>💻 I'm an engineering manager and software engineer working with Django and Go.</p>
         <p>🇩🇪 I'm based in Düsseldorf,DE.</p>
