--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 {{define "content"}}
-    <h1>Home</h1>
+    <h1>About me</h1>
     <section>
-        <h2>About me</h2>
-        <img src="assets/img/julien.jpeg" alt="A photo of me" width="200" height="200" >
+        <img src="assets/img/julien.jpeg" alt="A photo of me" width="200" height="200" >   
+    </section>
+    <section>
         <p>👋 Ciao I'm Julien, and welcome to my site.</p>
         <p>💻 I'm an engineering manager and software engineer working with Django and Go.</p>
         <p>🇩🇪 I'm based in Düsseldorf,DE.</p>
